# workshop-ticTacToe

./: .gitignore  README.md
subxt-examples/era/: Cargo.toml  README.md  shiden-metadata.scale
subxt-examples/era/src/: main.rs
