[package]
name = "era"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = "0.5.11"
sp-core = "6.0.0"
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
structopt = "0.3.25"
subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
tokio = { version = "1.8", features = ["macros", "time", "rt-multi-thread"] }
jsonrpsee = { version = "0.15.1", features = ["async-client",  "client-ws-transport"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
